--- a/index.html
+++ b/index.html
@@ -14,12 +14,17 @@
   <body>
     <header>
       <h1>Edie</h1>
-      <a href="#">
+      <a id="btn-menu" href="#">
         <span class="material-symbols-rounded">
           menu
         </span>
       </a>
-      <nav>
+      <nav id="nav" class="menu-close">
+        <a id="btn-close" href="#">
+          <span class="material-symbols-rounded">
+            close
+          </span>
+        </a>
         <ul>
           <li>
             <a href="#home">Home</a>
